Fix safety net selector z-index

--- a/src/Safetynet/Safetynet.css
+++ b/src/Safetynet/Safetynet.css
@@ -7,7 +7,7 @@
     padding: 5px 0;
     letter-spacing: .03em;
     font-family: sans-serif;
-    z-index: 9999;
+    z-index: 999999;
     border: 1px solid hsla(0,0%,67.1%,.32);
     border-radius: 4px;
     box-shadow: 0 0 8px rgba(0,0,0,.15);
